--- a/react-multi-page-website/src/index.css
+++ b/react-multi-page-website/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'gv-time-font';
+  src: local('gv-time-font'), url(./fonts/gv-time-font/GvTimeRegular-BW768.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'bright-font';
+  src: url(./fonts/bright-font/BrightDemo-axVxE.otf);
 }
 
+body {
+  margin: 0;
+  font-family: 'bright-font';
+
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.image-holder {
+  z-index: -1;
+  margin-top: -200px;
 }
