--- a/react-multi-page-website/src/index.css
+++ b/react-multi-page-website/src/index.css
@@ -15,6 +15,8 @@
 body {
   margin: 0;
   font-family: 'bratsy';
+  background-color: #c3e5e5;
+  background-image: url(./svg/icecream.svg);
 
 }
 code {
@@ -26,3 +28,4 @@ code {
   z-index: -1;
   margin-top: -200px;
 }
+
