new SVG tile background

--- a/react-multi-page-website/src/index.css
+++ b/react-multi-page-website/src/index.css
@@ -15,10 +15,10 @@
 body {
   margin: 0;
   font-family: 'bratsy';
-  background-color: #c3e5e5;
+  background-color: #be4d06;
   background-repeat: repeat;
    
-  background-image: url(./svg/tile.svg);
+  background-image: url(./svg/tile2.svg);
 
 }
 code {
