--- a/react-multi-page-website/src/components/Home.css
+++ b/react-multi-page-website/src/components/Home.css
@@ -5,5 +5,6 @@ body {
 }
 
 .heyhi {
-  background-image: url(../svg/heyhii.png)
+  background-repeat: no-repeat;
+  /* background-image: url(../svg/heyhii.png) */
 }
