--- a/react-multi-page-website/src/components/Contact.css
+++ b/react-multi-page-website/src/components/Contact.css
@@ -1,8 +1,4 @@
-.contact-container {
-  width: 100px;
-  height: 10px;
-  display: grid;
-}
+
 
 body {
   margin: 40px;
@@ -10,40 +6,36 @@ body {
 
 .wrapper {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 100px;
     grid-template-columns: [col] 100px [col] 100px [col] 100px [col] 100px  ;
     grid-template-rows: [row] auto [row] auto [row] ;
-    background-color: #fff;
-    color: #444;
+    
   }
 
   .box {
-    background-color: #444;
     color: #fff;
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
+    background-color: #e5e2a8;
+    border-radius: 15%;
+    color: #647201;
 
   }
 
   .a {
     grid-column: col / span 2;
     grid-row: row ;
+    border: 5px solid black;;
   }
   .b {
     grid-column: col 3 / span 2 ;
     grid-row: row ;
+    border: 5px solid black;;
   }
   .c {
     grid-column: col ;
     grid-row: row 2 ;
+    border: 5px solid black;
   }
-  .d {
-    grid-column: col 2 / span 3 ;
-    grid-row: row 2 ;
-  }
-
-  .e {
-    grid-column: col / span 4;
-    grid-row: row 3;
-  }
+ 
