--- a/react-multi-page-website/src/components/Info.css
+++ b/react-multi-page-website/src/components/Info.css
@@ -6,36 +6,33 @@ body {
     display: grid;
     grid-gap: 100px;
     grid-template-areas: 
-    "a a c"
-    "a a c"
-    "b c c";
+    "a a b"
+    "a a b"
+    "b c c"; 
     grid-template-rows: 50px 1fr 30px;
     grid-template-columns: 150px 1fr;
     
   }
 
   .box {
-    color: #fff;
     border-radius: 5px;
-    padding: 20px;
-    font-size: 150%;
-    
     border-radius: 15%;
-    color: #647201;
-
   }
 
   .a {
     width: 500px;
-    background-color: #e5e2a8;
-    border: 5px solid rgb(230, 31, 31);;
+    border: 5px solid rgb(230, 31, 31);
+    font-size: 150%;
+    
+    color: #647201;
   }
   .b {
     grid-column: col 3 / span 2 ;
     grid-row: row ;
     width: 500px;
     background-color: #e5e2a8;
-    border: 5px solid black;;
+    border: 5px solid black;
+    
   }
   .c {
     grid-column: col ;
@@ -48,9 +45,7 @@ body {
   .d {
     grid-column: col ;
     grid-row: row 2 ;
-    width: 500px;
-    background-color: #e5e2a8;
-    border: 5px solid rgb(52, 219, 18);
+    align-self: center;
   }
  
  
