nav converted to horizontal

--- a/react-multi-page-website/src/components/Info.css
+++ b/react-multi-page-website/src/components/Info.css
@@ -20,11 +20,9 @@ body {
   }
 
   .a {
-    width: 500px;
-    border: 5px solid rgb(230, 31, 31);
-    font-size: 150%;
-    
-    color: #647201;
+   margin: 0;
+   padding: 0;
+  
   }
   .b {
     grid-column: col 3 / span 2 ;
