--- a/react-multi-page-website/src/components/Navigation.css
+++ b/react-multi-page-website/src/components/Navigation.css
@@ -1,43 +1,89 @@
-.navbarcontainer {
- font-size: 2vw;
- padding: 5px;
- 
+
+
+.nav-container {
+  width: 100%;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 20px;
-  border-radius: 30%;
+.nav-container {
+  width: 100%;
+  border-radius: 35%;
   background-color: #647201;
-  border: 50px solid #647201;
-;
 }
 
-li a {
-  color: #e5e2a8;
+nav {
+  max-width: 1720px;
+  margin: 0 auto;
+  border: 19px solid #e5e2a8;
   border-radius: 30%;
-  padding: 2%;
-  background-color: #a6b73a;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+}
+
+.left-menu {
+  grid-column: 1;
+}
+
+.logo {
+  grid-column: 2;
+}
+
+#nav-toggle, .burger-menu {
+  display: none;
+}
+ 
+      
+
+@media only screen and (max-width: 1025px) {
+  .burger-menu {
+    display: inline-block;
+  }
+
+  .left-menu {
+    display: none;
+  }
+
+  #nav-toggle:checked ~ .left-menu {
+    display: grid;
+    grid-row: 2;
+  }
+}                
+
+nav a {
+  color: #e5e2a8;
   text-decoration: none;
+  font-family: 'bright', sans-serif;
+  
+  transition: .10s all ease-in-out;
+}
+   
+
+nav a:hover {
+  opacity: .7;
+}
+   
+
+.left-menu a {
+  padding: 10px 0;
+  margin-left: 15px;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 0.5px;
 }
 
-li {
-  text-align: center;
-  display: inline;
-  border-bottom: 10px solid #647201; 
+
+.logo {
+  font-size: 40px;
+  padding: 1rem;
+}
+   
+.left-menu {
+  grid-column: 1;
+  align-self: center;
 }
 
-li:last-child {
-  border-bottom: none;
-}
 
-li a.active {
-  color: #e5e2a8;
-}
-
-li a:hover:not(.active) {
-  background-color: #e5e2a8;
-  color: #a6b73a;
-  border-radius: 30%;
+.burger-menu {
+  grid-column: 1;
+  align-self: center;
+  margin-left: 20px;
 }
