--- a/react-multi-page-website/src/components/Info.css
+++ b/react-multi-page-website/src/components/Info.css
@@ -1,26 +1,21 @@
 
 
-.wrapper {
-    display: grid;
-    grid-gap:10px;
-    grid-template-columns: 1fr 1fr 40px 20%;
-    grid-template-rows: 50px 50px 50px;
-    
-  }
+
 
   .box {
-    border-radius: 20%;  
+    border-radius: 35%;
+    background-color: #e5e2a8;
+    padding: 2%;
+    width: 100%;
   }
 
   .text-box-red {
-    grid-column: col 3 / span 2 ;
-    grid-row: row ;
-    /* width: 70%; */
-    padding: 5%;
-    margin-top: 8%;
-    color: wheat;
-    background-color: #bf4d06;
-    border: 20px solid #b73919;
+    border-radius: 35%;
+    padding: 6%;
+    color: black;
+    background-color: #e5e2a8;
+    border: 20px solid black;
+    
     
   }
   .text-box-cream {
@@ -33,4 +28,23 @@
 
 
  
- 
+  .floating {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 0px;
+    margin-top: 5px;
+  }
+  
+  @keyframes floating {
+    0% { transform: translate(0, 0px); }
+    50% { transform: translate(0, 15px); }
+    100% { transform: translate(0, -0px); }
+  }
+  
+a {
+  text-decoration: none;
+  color: black;
+
+}
