--- a/react-multi-page-website/src/components/Navigation.css
+++ b/react-multi-page-website/src/components/Navigation.css
@@ -1,13 +1,10 @@
 
-
-.nav-container {
-  width: 100%;
-}
-
 .nav-container {
   width: 100%;
   border-radius: 35%;
   background-color: #647201;
+  padding: 3%;
+  margin-bottom: 3%;
 }
 
 nav {
@@ -33,7 +30,7 @@ nav {
  
       
 
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1225px) {
   .burger-menu {
     display: inline-block;
   }
@@ -63,7 +60,7 @@ nav a:hover {
    
 
 .left-menu a {
-  padding: 10px 0;
+  padding: 10px 10px 0px 0px;
   margin-left: 15px;
   font-size: 20px;
   font-weight: 300;
@@ -72,8 +69,11 @@ nav a:hover {
 
 
 .logo {
-  font-size: 40px;
-  padding: 1rem;
+  font-size: 80px;
+  padding: 1vw;
+  color: wheat;
+  /* -webkit-text-stroke-width: .2vw;
+  -webkit-text-stroke-color: wheat; */
 }
    
 .left-menu {
