images added to portfolio

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .HeyHi {
-  font-family: 'Bratsy';
+  font-family: 'Bratsy', 'gv-time', 'bright', 'roockabye-font', 'Gill Sans';
   display: grid;
   justify-items: center;
   font-size: 23vw;
