new portfolio components added

--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -45,6 +45,39 @@
     50% { transform: translate(0, 15px); }
     100% { transform: translate(0, -0px); }
   }
+
+   
+  .floating-slow {
+    animation-name: floating;
+    animation-duration: 25s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 0px;
+    margin-top: 5px;
+  }
+  
+  @keyframes floating-slow {
+    0% { transform: translate(0, 0px); }
+    50% { transform: translate(0, 10px); }
+    100% { transform: translate(0, -0px); }
+  }
+
+  .floating-fast {
+    animation-name: floating;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 0px;
+    margin-top: 5px;
+  }
+  
+  @keyframes floating-fast {
+    0% { transform: translate(0, 0px); }
+    50% { transform: translate(0, 12px); }
+    100% { transform: translate(0, -0px); }
+  }
+  
+
   
 a {
   text-decoration: none;
