--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,7 @@
   justify-items: center;
   font-size: 23vw;
   line-height: 11rem;
-  color: wheat;
+  color: #e5e2a8;
   -webkit-text-stroke-width: 7px;
   -webkit-text-stroke-color: black;
 
