--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -7,7 +7,7 @@
   }
   .box-portfolio {
     border-radius: 15%;
-    background-color: rgb(55, 49, 49);
+    background-color: #b7b43a;
     padding: 40px;
   }
 
