circle images added'

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,6 +1,9 @@
 img {
   filter: grayscale(100%);
-  height:"200vw";
+  width:15vw;
+  height:15vw;
+  object-fit:cover;
+  border-radius:50%;
 }
 
 h1 {
